; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_malloc.c_m_malloc.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_malloc.c_m_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"malloc %d : %p\0A\00", align 1
@current_bytes_allocated = common dso_local global i32 0, align 4
@total_bytes_allocated = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @m_malloc(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i8* @malloc(i64 %4)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i64, i64* %2, align 8
  %13 = call i32 @m_malloc_fail(i64 %12)
  br label %14

14:                                               ; preds = %11, %8, %1
  %15 = load i64, i64* %2, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @DEBUG_printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %15, i8* %16)
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @m_malloc_fail(i64) #1

declare dso_local i32 @DEBUG_printf(i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
